@@ -1,39 +1,37 @@
 import dictionary.Extract;
-import dictionary.Word;
 import hanziToAnki.Deck;
 import hanziToAnki.DeckFactory;
-import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 import java.net.URISyntaxException;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.nio.charset.StandardCharsets;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class DeckFactoryTest {
 
-    static Extract extract = new Extract();
-
     @BeforeAll
     static void setUp() throws URISyntaxException {
-        extract.readInDictionary();
+        Extract.readInDictionary();
     }
 
     @Test
     void testSomeValidWords() throws IOException {
-        List<String> wordStrings = List.of("爱", "吧", "阿姨");
-        Set<Word> validWords = new HashSet<>();
-        for (String wordString: wordStrings){
-            validWords.add(extract.getWordFromChinese(wordString));
-        }
-        Deck outputDeck = DeckFactory.generateDeck(validWords);
-        assertEquals(IOUtils.toString(this.getClass().getResourceAsStream("validWordsDeck.txt")),
-                Arrays.toString(outputDeck.getLines().toArray()).replace(",","\n"));
+        var words = Stream.of("爱", "吧", "阿姨")
+                .map(Extract::getWordFromChinese)
+                .collect(Collectors.toSet());
+
+        Deck deck = DeckFactory.generateDeck(words);
+        String deckString = String.join("\n", deck.getLines());
+
+        var resStream = this.getClass().getResourceAsStream("validWordsDeck.txt");
+        var expected = new String(resStream.readAllBytes(), StandardCharsets.UTF_8);
+
+        assertEquals(expected, deckString);
     }
 
 }
